[package]
name = "fuze"
version = "0.1.0"
authors = ["thomas.gouveia <thomas.gouveia@etu.umontpellier.fr>"]
edition = "2018"
description = "Fuze is a user-friendly web crawler written in Rust which aims to help you find broken links on websites."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
scraper = "0.12.0"
clap = { version = "3.0.6", features = ["derive"] }